# rust-os-practice

./: Cargo.toml  README.md  notes  start-vm  x86_64-os_practice.json
.cargo/: config.toml
src/: allocator.rs  gdt.rs  heap.rs  lib.rs  main.rs  mem.rs  serial.rs  task.rs  vga_buf.rs
src/allocator/: linked_list.rs
src/heap/: linked_list.rs
src/interrupts/: idt.rs  mod.rs
src/task/: exec.rs  keyboard.rs  simple_exec.rs
tests/: boot_test.rs  heap_test.rs  interrupt_test.rs  should_panic.rs
