[package]
name = "os-practice"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Sullivan <ryanbakersullivan@gmail.com>"]

[dependencies]
bootloader = "0.9"
# allows us to specify VGA buffer writes as volatile so they are not optimized out
volatile = "0.2.6"
# needed so our VGA buffer WRITER can be written to as a static variable without being unsafe
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
# requires "spin_no_std" since we don't link to the std lib
features = ["spin_no_std"]
