[package]
name = "os-practice"
version = "0.1.0"
edition = "2018"
authors = ["Ryan Sullivan <ryanbakersullivan@gmail.com>"]

[package.metadata.bootimage]
# specifies the IO port through which the device can be reached from our kernel: "iobase=0xf4(port_num)"
# if some value is sent to this port the kernel will exit with code: (value << 1) | 1
# add in "-serial stdio" to redirect from the serial port to the stdio on the host machine
# add in "-display none" so that the console does not show during testing
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
# define custom testing exit code
test-success-exit-code = 33 # (0x10 << 1) | 1
# define test timeout (in seconds)
test-timeout = 300

[dependencies]
bootloader = "0.9"
# allows us to specify VGA buffer writes as volatile so they are not optimized out
volatile = "0.2.6"
# needed so our VGA buffer WRITER can be written to as a static variable without being unsafe
spin = "0.5.2"
# gives us the Port type to speak to the QEMU port to exit
x86_64 = "0.14.2"
# allows us to init the UART and send data over the serial port
# common UARTs today are compatible with 16550 UART, a much simpler UART model
uart_16550 = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
# requires "spin_no_std" since we don't link to the std lib
features = ["spin_no_std"]

# removes the testing harness for should_panic.rs as only a single test is run
# it would be simpler then to just run our single test from should_panic's _start
# function
[[test]]
name = "should_panic"
harness = false
